Bug: Overflowing Form Form is overflowing from container when run on chrome browser from windows.
Changelog:
- change flex on all left containers to 1, including form,
- change height of form wrapper to auto"

--- a/styles.css
+++ b/styles.css
@@ -67,13 +67,9 @@ body {
     font-weight: bold;
 }
 
-.bottom-grey-text-container{
-    flex:1
-}
-
 .form-container{
     display: flex;
-    min-height: 33vh;
+    min-height: auto;
     flex: 1;
     background-color: white;
     box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.3);
